@@ -4,6 +4,7 @@ import com.backend.server.api.admin.user.dto.AdminUserListRequest;
 import com.backend.server.api.admin.user.dto.AdminUserListResponse;
 import com.backend.server.api.admin.user.dto.AdminUserRequest;
 import com.backend.server.api.admin.user.dto.AdminUserResponse;
+import com.backend.server.api.admin.user.dto.AdminUserSortType;
 import com.backend.server.model.entity.Professor;
 import com.backend.server.model.entity.User;
 import com.backend.server.model.entity.enums.Role;
@@ -11,7 +12,6 @@ import com.backend.server.model.repository.UserRepository;
 import com.backend.server.model.repository.UserSpecification;
 import com.backend.server.model.repository.ProfessorRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import org.springframework.data.jpa.domain.Specification;
@@ -28,12 +28,19 @@ public class AdminUserService {
     private final PasswordEncoder passwordEncoder;
 
     public AdminUserListResponse getUsers(AdminUserListRequest request) {
-        Pageable pageable = UserSpecification.getPageable(request);
+        if (request.getSortBy() == null)
+            request.setSortBy(AdminUserSortType.getDefault());
+        Pageable pageable = request.toPageable();
+
         Specification<User> spec = UserSpecification.filterUsers(request);
 
         Page<User> page = userRepository.findAll(spec, pageable);
+        List<Professor> professors = page.getContent()
+                .stream()
+                .map(User::getProfessor)
+                .toList();
 
-        return new AdminUserListResponse(page);
+        return new AdminUserListResponse(page, professors);
     }
 
     public void deleteUser(Long id) {
@@ -41,36 +48,36 @@ public class AdminUserService {
     }
 
     @Transactional
-    public AdminUserResponse updateUser(Long id, AdminUserRequest request) {
+    public Long updateUser(Long id, AdminUserRequest request) {
         User user = userRepository.findById(id).orElseThrow(IllegalArgumentException::new);
         Professor professor = professorRepository.findById(request.getProfessorId())
                 .orElseThrow(IllegalArgumentException::new);
         user.update(professor, request);
         user = userRepository.save(user);
-        return new AdminUserResponse(user);
+        return user.getId();
     }
 
     @Transactional
-    public AdminUserResponse resetUserPassword(Long id) {
+    public Long resetUserPassword(Long id) {
         User user = userRepository.findById(id).orElseThrow(IllegalArgumentException::new);
         user.toBuilder().password(passwordEncoder.encode(user.getStudentNumber()));
-        userRepository.save(user);
-        return new AdminUserResponse(user);
+        user = userRepository.save(user);
+        return user.getId();
     }
 
     @Transactional
-    public AdminUserResponse createUser(AdminUserRequest request) {
+    public Long createUser(AdminUserRequest request) {
         Professor professor = professorRepository.findById(request.getProfessorId())
                 .orElseThrow(IllegalArgumentException::new);
-        User user = request.toEntity(professor, passwordEncoder);
+        User user = request.toEntity(professor, Role.ROLE_USER, passwordEncoder);
         user = userRepository.save(user);
-        return new AdminUserResponse(user);
+        return user.getId();
     }
 
-    public List<AdminUserResponse> getAdmins() {
-        return userRepository.findByRoleInOrderByNameAsc(List.of(Role.ROLE_ADMIN, Role.ROLE_SUPER_ADMIN))
-                .stream()
-                .map(AdminUserResponse::new)
-                .collect(Collectors.toList());
+    public List<AdminUserResponse> getAdmins(List<Role> roles) {
+        List<User> users = userRepository.findByRoleInOrderByNameAsc(roles);
+        return users.stream()
+                .map(user -> new AdminUserResponse(user, user.getProfessor()))
+                .toList();
     }
 }
